# banan-stats

./: .dockerignore  .gitignore  README.md  TROUBLESHOOTING.md  docker-compose.README.md  docker-compose.yml  go.work  go.work.sum  traefik-config.yml  traefik-dynamic.yml
banan-stats/: .dockerignore  Cargo.toml  Dockerfile  go.mod
banan-stats-rs/: Dockerfile
banan-stats-rs/src/: analyzer.rs  ingest.rs  state.rs  store.rs
banan-stats/cmd/stats-sidecar/: main.go
banan-stats/internal/analyzer/: analyzer.go  analyzer_test.go
banan-stats/internal/dashboard/: dashboard.go
banan-stats/internal/dashboard/assets/: script.js  style.css
banan-stats/internal/store/: store.go
banan-stats/src/: analyzer.rs  dashboard.rs  main.rs
docs/: implementation.md  usage.md
example/: Dockerfile.traefik  README.md  docker-compose.yml
traefik-stats/: .traefik.yml  go.mod
traefik-stats/traefikstats/: config.go  disk_queue.go  grpc_client.go  middleware.go  middleware_test.go  types.go
