[package]
name = "banan-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
duckdb = { version = "0.10", features = ["chrono", "bundled"] }
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
url = "2"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", tag = "v0.4.37" }
